@@ -167,6 +167,7 @@ src/gcompris/gcompris.h
 src/gcompris/help.c
 src/gcompris/images_selector.c
 src/gcompris/interface.c
+src/gcompris/oggplayer.c
 src/gcompris/properties.c
 src/gcompris/soundutil.c
 src/gcompris/support.c
