@@ -1,3 +1,7 @@
+2003-06-15  Bruno Coudoin  <bruno.coudoin@free.fr>
+
+	* src/boards/menu.c: (item_event): fixed bug #752703 (from Olivier Berger) : Better user warning message
+
 2003-06-09  Bruno Coudoin  <bruno.coudoin@free.fr>
 
 	* TODO: Added Dynamic screen/skin resolution change
